<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:rowCount="4"
    android:orientation="vertical">

    <!-- Row 2: Button and CheckBox -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:text="@string/my_GUI"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/ButtonText"
        android:textSize="20sp"
        tools:ignore="ObsoleteLayoutParam" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_weight="1"
        android:layout_gravity="fill"
        android:text="@string/CheckOut"
        android:textSize="20dp" />

    <!-- Row 3: ImageButton and Switch -->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_row="2"
        android:layout_column="0"
        android:src="@drawable/flag"
        android:layout_weight="1"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/switch1"
        android:layout_row="2"
        android:layout_column="1"
        android:minHeight="48dp"
        android:text="@string/switchONOFF"
        android:textSize="20dp"
        android:layout_gravity="fill"
        android:layout_weight="1"
        tools:ignore="TextSizeCheck" />

    <!-- Row 4: EditText -->
    <EditText

        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/hint_text"
        android:inputType="textCapWords"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="250dp" />

</GridLayout>
