<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <!-- Row 2: Button and CheckBox -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="254dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:text="@string/my_GUI"
        android:textSize="30dp"
        android:visibility="visible" />

    <!-- Row 3: ImageButton and Switch -->
    <Button
        android:id="@+id/button"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:text="@string/ButtonText"
        android:textSize="20dp"
        android:visibility="visible"
        android:onClick="onClickButton" />

    <!-- Row 4: EditText -->

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text="@string/CheckOut"
        android:textSize="20dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button"
        android:src="@drawable/flag"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentRight="true"
        android:minHeight="48dp"
        android:text="@string/switchONOFF"
        android:textSize="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_text"
        android:inputType="textCapWords"
        android:textSize="20dp"
        tools:ignore="VisualLintTextFieldSize,TextSizeCheck" />

</RelativeLayout>
